--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.4.0",
     "koa-xml-body": "^2.0.0",
+    "mysql": "^2.15.0",
     "raw-body": "^2.3.2",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
